--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,19 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     
+    <dependencyManagement>
+      <dependencies>
+        <dependency>
+          <groupId>io.thorntail</groupId>
+          <artifactId>bom</artifactId>
+          <version>2.6.0.Final</version>
+          <scope>import</scope>
+          <type>pom</type>
+        </dependency>
+      </dependencies>
+    </dependencyManagement>
+
+    
     <dependencies>
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
@@ -58,10 +71,9 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.glassfish.metro</groupId>
-            <artifactId>webservices-rt</artifactId>
-            <version>2.3</version>
-            <scope>provided</scope>
+          <groupId>io.thorntail</groupId>
+          <artifactId>webservices</artifactId>
+          <version>2.6.0.Final</version>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
@@ -118,6 +130,19 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>io.thorntail</groupId>
+                <artifactId>thorntail-maven-plugin</artifactId>
+                <version>2.6.0.Final</version>
+                <executions>
+                  <execution>
+                    <goals>
+                      <goal>package</goal>
+                    </goals>
+                  </execution>
+                </executions>
+              </plugin>
+
         </plugins>
     </build>
 
